# za_identity_number

./: .flake8  LICENSE  README.md  __init__.py  example.py  pyproject.toml  pytest.ini  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: za_id_ci.yml
tests/: test_generated_identities.py  test_luhn.py  test_south_africanIdentity_number.py  test_south_african_identity_number.py  test_validation.py
za_id_number/: __init__.py  constants.py  test_validation.py  za_id_number.py  za_identity_number.py
