[tool.poetry]
name = "za-id-number"
version = "0.0.8"
description = "South African (RSA/ZA) Identity Number checking and validation library"
authors = ["Christo Goosen <christogoosen@gmail.com>"]
license = "MIT"
packages = [
    { include = "za_id_number" },
    { include = "za_id_number/*.py" },
    { include = "za_id_number/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9.0"
luhn = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-runner = "^6.0"
black = "^22.1"
bandit = "^1.7.5"

flake8 = "^7.1.1"
twine = "^6.1.0"
setuptools = "^75.8.0"
pytest-cov = "^6.0.0"
python-dateutil = "^2.9.0"
nose = "^1.3.7"
trio = "^0.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
