[project]
name = "za-id-number"
version = "0.2.0"
description = "South African (RSA/ZA) Identity Number checking and validation library"
authors = [{ name = "Christo Goosen", email = "christogoosen@gmail.com" }]
requires-python = ">=3.9.0,<4"
license = "MIT"
dependencies = ["luhn>=0.2.0,<0.3"]

[tool.hatch.build.targets.sdist]
include = [
    "za_id_number",
    "za_id_number/*.py",
    "za_id_number/**/*.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "za_id_number",
    "za_id_number/*.py",
    "za_id_number/**/*.py",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-runner>=6.0,<7",
    "black>=24.3,<25",
    "bandit>=1.7.5,<2",
    "flake8>=7.1.1,<8",
    "twine>=6.1.0,<7",
    "setuptools>=76.0.0,<77",
    "pytest-cov>=6.0.0,<7",
    "python-dateutil>=2.9.0,<3",
    "nose>=1.3.7,<2",
    "trio>=0.28.0,<1",
]
